integration tests started
