# internal/transport/banners/update_handler.go
@@ -2,6 +2,7 @@ package banners_transport
 
 import (
 	"encoding/json"
+	"fmt"
 	"io"
 	"log/slog"
 	"net/http"
@@ -21,7 +22,7 @@ import (
 // @ID update-banner
 // @Tags banner
 // @Produce json
-// @Param id path integer false "id"
+// @Param id path integer true "id"
 // @Param input body banner_model.BannerUpdate true "banner info"
 // @Success 200 {object} nil OK
 // @Failure 400 {object} transport.RespWriterError Некорректные данные
@@ -69,6 +70,62 @@ func (handler *bannersHandler) updateBanner(w http.ResponseWriter, r *http.Reque
 	handler.logger.Debug("valid successful")
 
 	err = handler.service.UpdateBanner(r.Context(), &banner)
+	if err == pgx.ErrNoRows {
+		handler.logger.Debug(err.Error())
+		w.WriteHeader(http.StatusNotFound)
+		return
+	}
+	if err != nil {
+		handler.logger.Debug(err.Error())
+		transport.ResponseWriteError(w, http.StatusInternalServerError, err.Error(), handler.logger)
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+	handler.logger.Debug("update OK")
+}
+
+// Обновление последней версии баннера
+// @Summary UpdateBannerVersion
+// @Security ApiKeyAuth
+// @Description Обновление последней версии баннера
+// @ID update-banner-version
+// @Tags banner
+// @Produce json
+// @Param id path integer true "id"
+// @Param version path integer true "version"
+// @Success 200 {object} nil OK
+// @Failure 400 {object} transport.RespWriterError Некорректные данные
+// @Failure 401 {object} nil Пользователь не авторизован
+// @Failure 403 {object} nil Пользователь не имеет доступа
+// @Failure 404 {object} nil Баннер не найден
+// @Failure 500 {object} transport.RespWriterError Внутренняя ошибка сервера
+// @Router /banner/{id}/{version} [patch]
+func (handler *bannersHandler) updateBannerVersion(w http.ResponseWriter, r *http.Request) {
+
+	id, err := strconv.Atoi(mux.Vars(r)["id"])
+	if err != nil {
+		handler.logger.Debug(err.Error())
+		transport.ResponseWriteError(w, http.StatusBadRequest, err.Error(), handler.logger)
+		return
+	}
+
+	version, err := strconv.Atoi(mux.Vars(r)["version"])
+	if err != nil {
+		handler.logger.Debug(err.Error())
+		transport.ResponseWriteError(w, http.StatusBadRequest, err.Error(), handler.logger)
+		return
+	}
+	if version < 1 || version > 3 {
+		err = fmt.Errorf("bad version")
+		handler.logger.Debug(err.Error())
+		transport.ResponseWriteError(w, http.StatusBadRequest, err.Error(), handler.logger)
+		return
+	}
+
+	handler.logger.Debug("update banner handler", slog.Int("id", id), slog.Int("version", version))
+
+	err = handler.service.UpdateBannerVersion(r.Context(), id, version)
 	if err == pgx.ErrNoRows {
 		handler.logger.Debug(err.Error())
 		w.WriteHeader(http.StatusNotFound)
